--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">EdamamApp</string>
     <string name="search_history">Search History</string>
     <string name="settings">Settings</string>
+    <string name="favorites">Favorites</string>
     <string name="name">Name...</string>
     <string name="select">Select</string>
     <string name="search">Search</string>
